force-app/main/default/objects/Product2/fields/Alternate_Description__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Description__c</fullName>
    <description>The Alternative item name/description</description>
    <inlineHelpText>The Alternative item name/description</inlineHelpText>
    <label>Alternate Description</label>
    <type>TextArea</type>
</CustomField>