force-app/main/default/objects/Product2/fields/Customer_Units_per_Item__c.field-meta.xml
<CustomField>
    <fullName>Customer_Units_per_Item__c</fullName>
    <description>Number of individual items in the package.</description>
    <label>Customer Units per Item</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>