force-app/main/default/objects/Product2/fields/EAN_Barcode__c.field-meta.xml
<CustomField>
    <fullName>EAN_Barcode__c</fullName>
    <description>The EAN Barcode for the individual items.</description>
    <label>EAN Barcode</label>
    <length>14</length>
    <type>Text</type>
</CustomField>