force-app/main/default/objects/Product2/fields/Gross_Unit_Volume__c.field-meta.xml
<CustomField>
    <fullName>Gross_Unit_Volume__c</fullName>
    <description>The gross volume of the item, including packaging.</description>
    <label>Gross Unit Volume</label>
    <precision>17</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>