force-app/main/default/objects/Product2/fields/Gross_Unit_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Unit_Weight__c</fullName>
    <description>The gross weight of the item, including packaging</description>
    <label>Gross Unit Weight</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>