force-app/main/default/objects/Product2/fields/Item_Class__c.field-meta.xml
<CustomField>
    <fullName>Item_Class__c</fullName>
    <label>Item Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agistment</fullName>
            </value>
            <value>
                <fullName>Ethanol - Beverage Grade</fullName>
            </value>
            <value>
                <fullName>Ethanol - Chemical</fullName>
            </value>
            <value>
                <fullName>Ethanol - Fuel 100</fullName>
            </value>
            <value>
                <fullName>Ethanol - Fusal Oil</fullName>
            </value>
            <value>
                <fullName>Ethanol - Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Ethanol Chemical Resales</fullName>
            </value>
            <value>
                <fullName>Export Gluten MMC</fullName>
            </value>
            <value>
                <fullName>Export Hi Protein Gluten - MMC</fullName>
            </value>
            <value>
                <fullName>Farm - Crops</fullName>
            </value>
            <value>
                <fullName>Flour - Bakery Additives</fullName>
            </value>
            <value>
                <fullName>Flour - Durum Flour</fullName>
            </value>
            <value>
                <fullName>Flour - Durum Semolina</fullName>
            </value>
            <value>
                <fullName>Flour - Mixes</fullName>
            </value>
            <value>
                <fullName>Flour - Mixes Altona</fullName>
            </value>
            <value>
                <fullName>Flour - Plain</fullName>
            </value>
            <value>
                <fullName>Flour - Plain Bulk</fullName>
            </value>
            <value>
                <fullName>Flour - Rejected</fullName>
            </value>
            <value>
                <fullName>Flour - Retail</fullName>
            </value>
            <value>
                <fullName>Flour - Retail Mixes</fullName>
            </value>
            <value>
                <fullName>Flour - White Semolina</fullName>
            </value>
            <value>
                <fullName>Gemspray</fullName>
            </value>
            <value>
                <fullName>Glucose - 41Be</fullName>
            </value>
            <value>
                <fullName>Glucose - 41C</fullName>
            </value>
            <value>
                <fullName>Glucose - 43Be</fullName>
            </value>
            <value>
                <fullName>Gluten - Dry Gluten</fullName>
            </value>
            <value>
                <fullName>Gluten - Dry Gluten C</fullName>
            </value>
            <value>
                <fullName>LIQUID CO2</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Paper Bags</fullName>
            </value>
            <value>
                <fullName>Offal - Canola Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>