force-app/main/default/objects/Product2/fields/Item_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_Code__c</fullName>
    <label>Item Class Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A01</fullName>
            </value>
            <value>
                <fullName>B02</fullName>
            </value>
            <value>
                <fullName>B39</fullName>
            </value>
            <value>
                <fullName>B40</fullName>
            </value>
            <value>
                <fullName>C01</fullName>
            </value>
            <value>
                <fullName>C44</fullName>
            </value>
            <value>
                <fullName>C48</fullName>
            </value>
            <value>
                <fullName>C50</fullName>
            </value>
            <value>
                <fullName>E02</fullName>
            </value>
            <value>
                <fullName>E04</fullName>
            </value>
            <value>
                <fullName>E05</fullName>
            </value>
            <value>
                <fullName>E06</fullName>
            </value>
            <value>
                <fullName>E07</fullName>
            </value>
            <value>
                <fullName>E08</fullName>
            </value>
            <value>
                <fullName>E10</fullName>
            </value>
            <value>
                <fullName>E34</fullName>
            </value>
            <value>
                <fullName>E50</fullName>
            </value>
            <value>
                <fullName>E51</fullName>
            </value>
            <value>
                <fullName>G09</fullName>
            </value>
            <value>
                <fullName>G10</fullName>
            </value>
            <value>
                <fullName>G11</fullName>
            </value>
            <value>
                <fullName>G12</fullName>
            </value>
            <value>
                <fullName>G13</fullName>
            </value>
            <value>
                <fullName>G14</fullName>
            </value>
            <value>
                <fullName>G15</fullName>
            </value>
            <value>
                <fullName>G16</fullName>
            </value>
            <value>
                <fullName>G17</fullName>
            </value>
            <value>
                <fullName>H16</fullName>
            </value>
            <value>
                <fullName>H17</fullName>
            </value>
            <value>
                <fullName>I18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>