force-app/main/default/objects/Product2/fields/Item_Pricing_Weight__c.field-meta.xml
<CustomField>
    <fullName>Item_Pricing_Weight__c</fullName>
    <description>The value used to get the selling quantity back to the pricing quantity. E.g. Pricing in Tonnes, selling 25kg bags, this would be 0.025. Pricing is caluclated Sellining Qty * Contract Price * [this value]</description>
    <inlineHelpText>The value used to get the selling quantity back to the pricing quantity. E.g. Pricing in Tonnes, selling 25kg bags, this would be 0.025. Pricing is caluclated Sellining Qty * Contract Price * [this value]</inlineHelpText>
    <label>Item Pricing Weight</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>