force-app/main/default/objects/Product2/fields/Item_Volume__c.field-meta.xml
<CustomField>
    <fullName>Item_Volume__c</fullName>
    <description>The recorded net volume of the product</description>
    <label>Item Volume</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>