force-app/main/default/objects/Product2/fields/Item_Weight__c.field-meta.xml
<CustomField>
    <fullName>Item_Weight__c</fullName>
    <description>The recorded net weight of the product.</description>
    <inlineHelpText>Product Weight</inlineHelpText>
    <label>Item Weight</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>