force-app/main/default/objects/Product2/fields/Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site__c</fullName>
    <description>The usual production site for the product</description>
    <label>Manufacturing Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
            <value>
                <fullName>ALT</fullName>
            </value>
            <value>
                <fullName>ROC</fullName>
            </value>
            <value>
                <fullName>NOW</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>