force-app/main/default/objects/Product2/fields/Pallet_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Quantity__c</fullName>
    <description>The number of items usually on a pallet.</description>
    <inlineHelpText>The number of items usually on a pallet.</inlineHelpText>
    <label>Pallet Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>