force-app/main/default/objects/Product2/fields/Pricing_UOM__c.field-meta.xml
<CustomField>
    <fullName>Pricing_UOM__c</fullName>
    <description>The unit of measure used for pricing, abbreviation as per Selling UOM</description>
    <inlineHelpText>The unit of measure used for pricing, abbreviation as per Selling UOM</inlineHelpText>
    <label>Pricing UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BG</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>CTN</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>TE</fullName>
            </value>
            <value>
                <fullName>TH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>