force-app/main/default/objects/Product2/fields/Pricing_UOM_Description__c.field-meta.xml
<CustomField>
    <fullName>Pricing_UOM_Description__c</fullName>
    <description>The description for the pricing UOM, as per Selling UOM description</description>
    <inlineHelpText>The description for the pricing UOM, as per Selling UOM description</inlineHelpText>
    <label>Pricing UOM Description</label>
    <type>TextArea</type>
</CustomField>