force-app/main/default/objects/Product2/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <description>Reserved for reporting, currently M for manufactured; P for purchased</description>
    <inlineHelpText>Reserved for reporting, currently M for manufactured; P for purchased</inlineHelpText>
    <label>Reporting Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>