force-app/main/default/objects/Product2/fields/Tax_Required__c.field-meta.xml
<CustomField>
    <fullName>Tax_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Required</label>
    <type>Checkbox</type>
</CustomField>