force-app/main/default/objects/Product2/fields/Trade_Unit_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Trade_Unit_Barcode__c</fullName>
    <description>The Barcode for the whole item including EAN Barcode, this is the barcode for the plastic wrapped package</description>
    <label>Trade Unit Barcode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>