force-app/main/default/objects/Product2/fields/Unit_of_Measure_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Description__c</fullName>
    <description>The description for the selling unit of mesure, these expand the abbreviation - Bag, Tonnes, Litre. There isn&apos;t a definition for every UOM</description>
    <inlineHelpText>The description for the selling unit of mesure, these expand the abbreviation - Bag, Tonnes, Litre. There isn&apos;t a definition for every UOM</inlineHelpText>
    <label>Unit of Measure Description</label>
    <type>TextArea</type>
</CustomField>